reformatted lost page

--- a/views/lost.erb
+++ b/views/lost.erb
@@ -8,6 +8,13 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-<h2>You're lost!</h2>
+	<div id="wrap">
+		<div id = "title">
+			Geonatra
+		</div>
+		<div id ="spinner">
+			<h2>You're lost!</h2>
+		</div>
+	</div>
 </body>
 </html>
